# century-health-project

./: .gitignore  README.md  data_assesment_and_analysis.ipynb  pyproject.toml  requirements.txt
assets_dbt_python/: definitions.py
assets_dbt_python/assets/: dbt.py  raw_data.py
assets_dbt_python_tests/: test_defs.py
dbt_project/: dbt_project.yml
dbt_project/macros/: generate_schema_name.sql
dbt_project/models/: sources.yml
dbt_project/models/cleaned/: condition.sql  encounter.sql  medication.sql  observation.sql  patient.sql  patient_gender.sql
dbt_project/models/mart/: master_table.sql  schema.yml
